--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -24,10 +24,10 @@
       <div class="content">
         <h1>Earthquake Response App</h1>
         <p>This web application creates a map, interactive plots, and summary
-          for an earthquake using real-time data. It helps you visualize, analyze,
-          and collect information to use in talking points and scientific response.
-          Curious? Check out the <a href="./?eqid=nc72282711">2014 Napa
-          earthquake</a>.</p>
+          for an earthquake using real-time data. It helps you visualize,
+          analyze, and collect information to use in talking points and scientific
+          response. Curious? Check out the <a href="./?eqid=nc72282711">2014
+          Napa earthquake</a>.</p>
         <p>To get started, select a Mainshock from the list of Significant
           Earthquakes or enter an Event ID manually.</p>
       </div>
@@ -144,10 +144,10 @@
             <h2>Instructions</h2>
             <ol class="iconlist">
               <li>
-                <h3>Select the &lsquo;<em class="navbutton">Edit</em>&rsquo;
-                  tab and enter the <strong>Mainshock</strong> Event ID</h3>
-                <p>Select an earthquake from &lsquo;Significant Earthquakes in
-                  the Past Month&rsquo; or enter an Event ID manually.</p>
+                <h3>Select the ‘<em class="navbutton">Edit</em>’ tab and enter
+                  the <strong>Mainshock</strong> Event ID</h3>
+                <p>Select an earthquake from ‘Significant Earthquakes in the
+                  Past Month’ or enter an Event ID manually.</p>
                 <h4>Find an Earthquake</h4>
                 <ul class="find">
                   <li><a href="https://earthquake.usgs.gov/earthquakes/map">Latest
@@ -167,15 +167,15 @@
                   <strong>Foreshocks</strong> or <strong>Historical
                     Seismicity</strong> (optional)</h3>
                 <p>Initial parameter values are set automatically based on the
-                  mainshock&rsquo;s magnitude and estimated rupture length.</p>
+                  mainshock’s magnitude and estimated rupture length.</p>
                 <p>When you customize the parameters, the URL is automatically
                   updated to reflect the new value(s), making it easy to share
                   or bookmark your settings.</p>
               </li>
               <li>
-                <h3>Select the &lsquo;<em class="navbutton">Map</em>&rsquo;,
-                  &lsquo;<em class="navbutton">Plots</em>&rsquo; or
-                  &lsquo;<em class="navbutton">Summary</em>&rsquo; tab</h3>
+                <h3>Select the ‘<em class="navbutton">Map</em>’,
+                  ‘<em class="navbutton">Plots</em>’ or
+                  ‘<em class="navbutton">Summary</em>’ tab</h3>
               </li>
             </ol>
           </div>
@@ -212,7 +212,7 @@
               </li>
               <li>Scroll using the left / right edges of the page when viewing
                 plots to avoid unintentionally interacting with them. Use the
-                &lsquo;control&rsquo; key to pan a 3d plot.
+                ‘control’ key to pan a 3d plot.
               </li>
             </ol>
           </div>
