use span instead of div for loaderr

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -42,7 +42,7 @@
             <legend>Mainshock to Present</legend>
             <div class="mainshock">
               <h3>Mainshock
-                <div class="hide breather"></div>
+                <span class="hide breather"></span>
               </h3>
               <label for="eqid">
                 <p>Event ID (typically 2 letters followed by 8-10 characters)</p>
@@ -53,7 +53,7 @@
             <div class="hide details"></div>
             <div class="aftershocks">
               <h3>Aftershocks
-                <div class="hide breather"></div>
+                <span class="hide breather"></span>
                 <span class="hide count"></span>
               </h3>
               <label for="as-mag">
@@ -74,7 +74,7 @@
             <legend>Before the Mainshock</legend>
             <div class="foreshocks">
               <h3>Foreshocks
-                <div class="hide breather"></div>
+                <span class="hide breather"></span>
                 <span class="hide count"></span>
               </h3>
               <label for="fs-mag">
@@ -98,7 +98,7 @@
             </div>
             <div class="historical">
               <h3>Historical Seismicity
-                <div class="hide breather"></div>
+                <span class="hide breather"></span>
                 <span class="hide count"></span>
               </h3>
               <label for="hs-mag">
