--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -45,7 +45,7 @@
                 <span class="hide breather"></span>
               </h3>
               <label for="eqid">
-                <p>Event ID (typically 2 letters followed by 8-10 characters)</p>
+                Event ID (typically 2 letters followed by 8-10 characters)
               </label>
               <input type="text" id="eqid" value="" required="required"
                 pattern="^[^/\\:]+$" tabindex="2" />
@@ -56,15 +56,11 @@
                 <span class="hide breather"></span>
                 <span class="hide count"></span>
               </h3>
-              <label for="as-mag">
-                <p>Min magnitude</p>
-              </label>
+              <label for="as-mag">Min magnitude</label>
               <input type="number" id="as-mag" value="0" min="0" max="9"
                 step="0.1" autocomplete="off" pattern="^[0-9.]+$"
                 required="required" tabindex="3" />
-              <label for="as-dist">
-                <p>Max distance from mainshock (km)</p>
-              </label>
+              <label for="as-dist">Max distance from mainshock (km)</label>
               <input type="number" id="as-dist" required="required" value=""
                  min="1" step="1" autocomplete="off" pattern="^[0-9.]+$"
                 required="required" tabindex="4" />
@@ -77,21 +73,15 @@
                 <span class="hide breather"></span>
                 <span class="hide count"></span>
               </h3>
-              <label for="fs-mag">
-                <p>Min magnitude</p>
-              </label>
+              <label for="fs-mag">Min magnitude</label>
               <input type="number" id="fs-mag" value="1" min="0" max="9"
                 step="0.1" autocomplete="off" pattern="^[0-9.]+$"
                 required="required" tabindex="5" />
-              <label for="fs-dist">
-                <p>Max distance from mainshock (km)</p>
-              </label>
+              <label for="fs-dist">Max distance from mainshock (km)</label>
               <input type="number" id="fs-dist" value="" min="1" step="1"
                 autocomplete="off" pattern="^[0-9.]+$" required="required"
                 tabindex="6" />
-              <label for="fs-days">
-                <p>Max days before mainshock</p>
-              </label>
+              <label for="fs-days">Max days before mainshock</label>
               <input type="number" id="fs-days" value="30" min="1" step="1"
                 autocomplete="off" pattern="^[0-9.]+$" required="required"
                 tabindex="7" />
@@ -101,21 +91,15 @@
                 <span class="hide breather"></span>
                 <span class="hide count"></span>
               </h3>
-              <label for="hs-mag">
-                <p>Min magnitude</p>
-              </label>
+              <label for="hs-mag">Min magnitude</label>
               <input type="number" id="hs-mag" value="" min="0" max="9"
                 step="0.1" autocomplete="off" pattern="^[0-9.]+$"
                 required="required" tabindex="8" />
-              <label for="hs-dist">
-                <p>Max distance from mainshock (km)</p>
-              </label>
+              <label for="hs-dist">Max distance from mainshock (km)</label>
               <input type="number" id="hs-dist" value="" min="1" step="1"
                 autocomplete="off" pattern="^[0-9.]+$" required="required"
                 tabindex="9" />
-              <label for="hs-years">
-                <p>Max years before mainshock</p>
-              </label>
+              <label for="hs-years">Max years before mainshock</label>
               <input type="number" id="hs-years" value="10" min="1" step="1"
                 autocomplete="off" pattern="^[0-9.]+$" required="required"
                 tabindex="10" />
