--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -58,12 +58,10 @@
               </h3>
               <label for="as-mag">Min magnitude</label>
               <input type="number" id="as-mag" value="0" min="0" max="9"
-                step="0.1" autocomplete="off" pattern="^[0-9.]+$"
-                required="required" tabindex="3" />
+                step="0.1" autocomplete="off" required="required" tabindex="3" />
               <label for="as-dist">Max distance from mainshock (km)</label>
-              <input type="number" id="as-dist" required="required" value=""
-                 min="1" step="1" autocomplete="off" pattern="^[0-9.]+$"
-                required="required" tabindex="4" />
+              <input type="number" id="as-dist" value="" min="1" step="1"
+                autocomplete="off" required="required" tabindex="4" />
             </div>
           </fieldset>
           <fieldset>
@@ -75,16 +73,13 @@
               </h3>
               <label for="fs-mag">Min magnitude</label>
               <input type="number" id="fs-mag" value="1" min="0" max="9"
-                step="0.1" autocomplete="off" pattern="^[0-9.]+$"
-                required="required" tabindex="5" />
+                step="0.1" autocomplete="off" required="required" tabindex="5" />
               <label for="fs-dist">Max distance from mainshock (km)</label>
               <input type="number" id="fs-dist" value="" min="1" step="1"
-                autocomplete="off" pattern="^[0-9.]+$" required="required"
-                tabindex="6" />
+                autocomplete="off" required="required" tabindex="6" />
               <label for="fs-days">Max days before mainshock</label>
               <input type="number" id="fs-days" value="30" min="1" step="1"
-                autocomplete="off" pattern="^[0-9.]+$" required="required"
-                tabindex="7" />
+                autocomplete="off" required="required" tabindex="7" />
             </div>
             <div class="historical">
               <h3>Historical Seismicity
@@ -93,16 +88,13 @@
               </h3>
               <label for="hs-mag">Min magnitude</label>
               <input type="number" id="hs-mag" value="" min="0" max="9"
-                step="0.1" autocomplete="off" pattern="^[0-9.]+$"
-                required="required" tabindex="8" />
+                step="0.1" autocomplete="off" required="required" tabindex="8" />
               <label for="hs-dist">Max distance from mainshock (km)</label>
               <input type="number" id="hs-dist" value="" min="1" step="1"
-                autocomplete="off" pattern="^[0-9.]+$" required="required"
-                tabindex="9" />
+                autocomplete="off" required="required" tabindex="9" />
               <label for="hs-years">Max years before mainshock</label>
               <input type="number" id="hs-years" value="10" min="1" step="1"
-                autocomplete="off" pattern="^[0-9.]+$" required="required"
-                tabindex="10" />
+                autocomplete="off" required="required" tabindex="10" />
             </div>
           </fieldset>
           <fieldset class="buttons">
