add “no mainshock selected” message when appropriate

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600">
   </head>
-  <body>
+  <body class="no-mainshock">
     <header>
       <div id="titleBar">
         <h1>Earthquake Response App</h1>
@@ -209,6 +209,10 @@
         </p>
       </div>
     </section>
+    <div class="sel-mainshock">
+      <h2>No mainshock selected</h2>
+      <p><a href="#editPane">Select an earthquake</a></p>
+    </div>
     <footer>
       <div id="statusBar">
         <div class="initial">
