--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -210,7 +210,7 @@
       </div>
     </section>
     <div class="sel-mainshock">
-      <h2>No mainshock selected</h2>
+      <h2>No Mainshock Selected</h2>
       <p><a href="#editPane">Select an earthquake</a></p>
     </div>
     <footer>
