create timestamp in html instead of js

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -117,6 +117,7 @@
     </section>
     <section id="summaryPane" class="hide pane">
       <div class="features"></div>
+      <time class="updated"></time>
     </section>
     <section id="helpPane" class="hide pane">
       <div class="content">
