--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -118,7 +118,7 @@
       </section>
       <section id="summaryPane" class="hide pane">
         <div class="features"></div>
-        <time class="updated"></time>
+        <time id="updated"></time>
       </section>
       <section id="helpPane" class="hide pane">
         <div class="content">
