use id instead of class

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -211,7 +211,7 @@
           </p>
         </div>
       </section>
-      <div class="sel-mainshock">
+      <div id="sel-mainshock">
         <h2>No Mainshock Selected</h2>
         <p><a href="#editPane">Select an earthquake</a></p>
       </div>
