use section tag instead of div

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -211,10 +211,10 @@
           </p>
         </div>
       </section>
-      <div id="sel-mainshock">
+      <section id="sel-mainshock">
         <h2>No Mainshock Selected</h2>
         <p><a href="#editPane">Select an earthquake</a></p>
-      </div>
+      </section>
     </main>
     <footer>
       <div id="statusBar">
