add sidebar and associated buttons

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -24,6 +24,13 @@
           <li><a href="#summaryPane">Summary</a></li>
           <li><a href="#helpPane">Help</a></li>
         </ul>
+        <ul id="navSub">
+          <li><i class="icon-select"></i></li>
+          <li><i class="icon-search"></i></li>
+          <li><i class="icon-settings"></i></li>
+          <li><i class="icon-legend"></i></li>
+          <li><i class="icon-info"></i></li>
+        </ul>
       </nav>
     </header>
     <main>
@@ -216,6 +223,24 @@
         <p><a href="#editPane">Select an earthquake</a></p>
       </section>
     </main>
+    <aside id="sideBar">
+      <section id="select" class="hide">
+        <h3>Select an Earthquake</h3>
+      </section>
+      <section id="search" class="hide">
+        <h3>Search the Catalog</h3>
+      </section>
+      <section id="settings" class="hide">
+        <h3>Settings</h3>
+      </section>
+      <section id="legend" class="hide">
+        <h3>Legend</h3>
+      </section>
+      <section id="info" class="hide">
+        <h3>Earthquake Response App</h3>
+      </section>
+      <a class="icon-close">x</a>
+    </aside>
     <footer>
       <div id="statusBar">
         <div class="initial">
