match sidebar close button styles to leaflet close button

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -239,7 +239,7 @@
       <section id="info" class="hide">
         <h3>Earthquake Response App</h3>
       </section>
-      <a class="icon-close">x</a>
+      <a class="icon-close">×</a>
     </aside>
     <footer>
       <div id="statusBar">
