add content class and remove redundant padding

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -224,19 +224,19 @@
       </section>
     </main>
     <aside id="sideBar">
-      <section id="select" class="hide">
+      <section id="select" class="content hide">
         <h3>Select an Earthquake</h3>
       </section>
-      <section id="search" class="hide">
+      <section id="search" class="content hide">
         <h3>Search the Catalog</h3>
       </section>
-      <section id="settings" class="hide">
+      <section id="settings" class="content hide">
         <h3>Settings</h3>
       </section>
-      <section id="legend" class="hide">
+      <section id="legend" class="content hide">
         <h3>Legend</h3>
       </section>
-      <section id="info" class="hide">
+      <section id="info" class="content hide">
         <h3>Earthquake Response App</h3>
       </section>
       <a class="icon-close">×</a>
