use section tag

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -12,10 +12,10 @@
   </head>
   <body class="no-mainshock">
     <header>
-      <div id="titleBar">
+      <section id="titleBar">
         <h1>Earthquake Response App</h1>
         <p>Select an earthquake to get started.</p>
-      </div>
+      </section>
       <nav id="navBar">
         <ul id="navMain">
           <li><a href="#mapPane">Map</a></li>
@@ -119,8 +119,8 @@
               Mainshock’s magnitude and estimated rupture length.</p>
             <p>When you customize the parameters, the
               <abbr title="Uniform Resource Locator (web address)">URL</abbr> is
-              automatically updated to reflect the new value(s), making it easy to
-              share or bookmark your settings.</p>
+              automatically updated to reflect the new value(s), making it easy
+              to share or bookmark your settings.</p>
             <p class="required">* All fields are required</p>
           </div>
         </section>
