use camelCase id value

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -42,7 +42,7 @@
         <div class="features"></div>
         <time id="updated"></time>
       </section>
-      <section id="sel-mainshock">
+      <section id="selMainshock">
         <h2>No Mainshock</h2>
         <p><a href="#mapPane" class="select">Select an earthquake</a></p>
       </section>
