--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,
       maximum-scale=1.0, user-scalable=0" />
     <title>Earthquake Response App</title>
+    <link rel="stylesheet" href="lib/flatpickr/flatpickr.css" />
     <link rel="stylesheet" href="lib/leaflet/leaflet.css" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600">
@@ -192,6 +193,7 @@
         </div>
       </div>
     </footer>
+    <script src="lib/flatpickr/flatpickr.js"></script>
     <script src="lib/leaflet/leaflet.js"></script>
     <script src="lib/plotly/plotly-gl3d.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=AbortController"></script>
