use id instead of class for reset button

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -63,7 +63,7 @@
             <input type="text" id="eqid" value="" required="required"
               pattern="^[^/\\:]+$" tabindex="1" />
             <div class="hide details"></div>
-            <button type="reset" class="reset">Reset</button>
+            <button type="reset" id="reset">Reset</button>
           </div>
         </section>
         <section id="settingsBar" class="bar hide">
