add Catalog Search to legend

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -174,7 +174,7 @@
           <h2>Legend</h2>
           <ul>
             <li class="mainshock">Mainshock</li>
-            <li class="aftershocks">Aftershocks
+            <li class="aftershocks">Aftershocks, Catalog Search
               <ul>
                 <li class="asHour">Past hour</li>
                 <li class="asDay">Past day</li>
