remove default values from settings fields

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -75,7 +75,7 @@
                 <span class="hide count"></span>
               </h3>
               <label for="as-mag">Min magnitude</label>
-              <input type="number" id="as-mag" value="0" min="0" max="9"
+              <input type="number" id="as-mag" value="" min="0" max="9"
                 step="0.1" autocomplete="off" required="required" tabindex="4" />
               <label for="as-dist">Max distance from mainshock (km)</label>
               <input type="number" id="as-dist" value="" min="1" step="1"
@@ -87,13 +87,13 @@
                 <span class="hide count"></span>
               </h3>
               <label for="fs-mag">Min magnitude</label>
-              <input type="number" id="fs-mag" value="1" min="0" max="9"
+              <input type="number" id="fs-mag" value="" min="0" max="9"
                 step="0.1" autocomplete="off" required="required" tabindex="6" />
               <label for="fs-dist">Max distance from mainshock (km)</label>
               <input type="number" id="fs-dist" value="" min="1" step="1"
                 autocomplete="off" required="required" tabindex="7" />
               <label for="fs-days">Max days before mainshock</label>
-              <input type="number" id="fs-days" value="30" min="1" step="1"
+              <input type="number" id="fs-days" value="" min="1" step="1"
                 autocomplete="off" required="required" tabindex="8" />
             </div>
             <div class="historical">
@@ -108,7 +108,7 @@
               <input type="number" id="hs-dist" value="" min="1" step="1"
                 autocomplete="off" required="required" tabindex="10" />
               <label for="hs-years">Max years before mainshock</label>
-              <input type="number" id="hs-years" value="10" min="1" step="1"
+              <input type="number" id="hs-years" value="" min="1" step="1"
                 autocomplete="off" required="required" tabindex="11" />
             </div>
             <p>Initial parameter values are set automatically based on the
