--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -147,14 +147,12 @@
             <div class="dates">
               <div>
                 <label for="begin">Begin</label>
-                <input type="text" id="begin" required="required"
-                  placeholder="Select a date" tabindex="2">
+                <input type="text" id="begin" required="required" tabindex="2">
               </div>
               <span>–</span>
               <div>
                 <label for="end">End</label>
-                <input type="text" id="end" required="required"
-                  placeholder="Select a date" tabindex="3">
+                <input type="text" id="end" required="required" tabindex="3">
               </div>
             </div>
             <p class="utc">Use UTC time for custom dates.</p>
