update comcat link

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -202,7 +202,7 @@
             analyze, and collect information to use in talking points and
             scientific response.</p>
           <p class="comcat">Earthquake data is from
-            <a href="https://earthquake.usgs.gov/data/comcat/data-availability.php">ComCat</a>.
+            <a href="https://earthquake.usgs.gov/data/comcat/">ComCat</a>.
           </p>
           <h3>Tips</h3>
           <ol class="iconlist">
