refactor flagging of Mainshock, validity check

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600">
   </head>
-  <body class="no-mainshock">
+  <body>
     <header>
       <section id="titleBar">
         <h1>Earthquake Response App</h1>
@@ -43,7 +43,7 @@
         <div class="features"></div>
         <time id="updated"></time>
       </section>
-      <section id="selMainshock">
+      <section id="selectPane">
         <h2>No Mainshock</h2>
         <p><a href="#mapPane" class="select">Select an earthquake</a></p>
       </section>
