--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -53,7 +53,7 @@
         <section id="selectBar" class="bar hide">
           <div class="content">
             <h2>Select an Earthquake</h2>
-            <p>Select an earthquake from the list or on the <a href="#mapPane">map</a>,
+            <p>Select an earthquake from the list or on the <a href="#mapPane">Map</a>,
               or <a href="#" class="search">search</a> the catalog for an
               earthquake. You can also enter an Event ID manually below.</p>
             <h3>Significant Earthquakes <span>Past Month</span></h3>
@@ -125,7 +125,7 @@
         <div class="content">
           <h2>Find an Earthquake</h2>
           <p>Search the earthquake catalog and display the results on the
-            <a href="#mapPane">map</a>.</p>
+            <a href="#mapPane">Map</a>.</p>
           <h3>Magnitude</h3>
           <div class="slider-container">
             <div class="min">0</div>
@@ -186,7 +186,7 @@
             <li class="fieldnotes">FieldNotes
               <img src="img/pin-s-star+c0f@2x.png" alt="fieldnotes icon" />
             </li>
-            <li class="faults">Faults / Plate Boundaries</li>
+            <li class="faults">Faults, Plate Boundaries</li>
             <li class="shakemap">ShakeMap Stations</li>
             <li class="intensity">Intensity
               <img src="img/legend-intensity.png" alt="intensity scale" />
@@ -197,8 +197,8 @@
       <section id="infoBar" class="bar hide">
         <div class="content">
           <h2>Earthquake Response App</h2>
-          <p>This web application creates an interactive map, plots, and summary
-            for an earthquake using real-time data. It helps you visualize,
+          <p>This web application creates an interactive Map, Plots, and Summary
+            of an earthquake using real-time data. It helps you visualize,
             analyze, and collect information to use in talking points and
             scientific response.</p>
           <p class="comcat">Earthquake data is from
@@ -206,12 +206,12 @@
           </p>
           <h3>Tips</h3>
           <ol class="iconlist">
-            <li>Click on an earthquake in the summary list or on a (2d) plot
-              to view the earthquake and additional details on the map.
+            <li>Click on an earthquake in a Summary list or on a (2d) plot
+              to view the earthquake and additional details on the Map.
             </li>
-            <li>Scroll using the left / right edges of the page when viewing
-              plots to avoid unintentionally interacting with them. Use the
-              ‘control’ key to pan a 3d plot.
+            <li>Avoid unintentionally interacting with the Plots by scrolling
+               on the left / right edges of the page. Use the ‘control’ key to
+               pan a 3d plot.
             </li>
           </ol>
           <h3>Contacts</h3>
