--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -77,7 +77,7 @@
               <label for="as-mag">Min magnitude</label>
               <input type="number" id="as-mag" value="" min="0" max="9"
                 step="0.1" autocomplete="off" required="required" tabindex="4" />
-              <label for="as-dist">Max distance from mainshock (km)</label>
+              <label for="as-dist">Max distance from Mainshock (km)</label>
               <input type="number" id="as-dist" value="" min="1" step="1"
                 autocomplete="off" required="required" tabindex="5" />
             </div>
@@ -89,10 +89,10 @@
               <label for="fs-mag">Min magnitude</label>
               <input type="number" id="fs-mag" value="" min="0" max="9"
                 step="0.1" autocomplete="off" required="required" tabindex="6" />
-              <label for="fs-dist">Max distance from mainshock (km)</label>
+              <label for="fs-dist">Max distance from Mainshock (km)</label>
               <input type="number" id="fs-dist" value="" min="1" step="1"
                 autocomplete="off" required="required" tabindex="7" />
-              <label for="fs-days">Max days before mainshock</label>
+              <label for="fs-days">Max days before Mainshock</label>
               <input type="number" id="fs-days" value="" min="1" step="1"
                 autocomplete="off" required="required" tabindex="8" />
             </div>
@@ -104,10 +104,10 @@
               <label for="hs-mag">Min magnitude</label>
               <input type="number" id="hs-mag" value="" min="0" max="9"
                 step="0.1" autocomplete="off" required="required" tabindex="9" />
-              <label for="hs-dist">Max distance from mainshock (km)</label>
+              <label for="hs-dist">Max distance from Mainshock (km)</label>
               <input type="number" id="hs-dist" value="" min="1" step="1"
                 autocomplete="off" required="required" tabindex="10" />
-              <label for="hs-years">Max years before mainshock</label>
+              <label for="hs-years">Max years before Mainshock</label>
               <input type="number" id="hs-years" value="" min="1" step="1"
                 autocomplete="off" required="required" tabindex="11" />
             </div>
